{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 31,
  "lineage": "63747f3f-230e-e9c7-4e5e-ed1dcab51d50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-05d72f6757347a22e",
            "domain": "vpc",
            "id": "eipalloc-0a77fc7f676ef795c",
            "network_interface": "eni-009038f623d9b4953",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-204-241-179.compute-1.amazonaws.com",
            "public_ip": "54.204.241.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web",
            "aws_security_group.allow_tls",
            "aws_subnet.subnet-1",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_first_tf_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ddd875a1ea2c7f",
            "arn": "arn:aws:ec2:us-east-1:301380636616:instance/i-02fb31d2ec74a67cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fb31d2ec74a67cc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "drillers",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-009038f623d9b4953"
              }
            ],
            "primary_network_interface_id": "eni-009038f623d9b4953",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "54.204.241.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-077bd0fc90241caf7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0673aaa7e89c6bc35",
            "tags": {
              "Name": "My_Instance_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a45090f330627a9a"
            ]
          },
          "dependencies": [
            "aws_network_interface.web",
            "aws_security_group.allow_tls",
            "aws_subnet.subnet-1",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301380636616:internet-gateway/igw-0ad5d7e0a013eb6af",
            "id": "igw-0ad5d7e0a013eb6af",
            "owner_id": "301380636616",
            "tags": {
              "Name": "my-tf-ig"
            },
            "vpc_id": "vpc-06fb1022a578729b6"
          },
          "dependencies": [
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-009038f623d9b4953",
            "mac_address": "0a:83:73:33:8b:15",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a45090f330627a9a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0673aaa7e89c6bc35"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.subnet-1",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c7f7ec96927dccf8",
            "owner_id": "301380636616",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad5d7e0a013eb6af",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad5d7e0a013eb6af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-tf-rt"
            },
            "vpc_id": "vpc-06fb1022a578729b6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d79800c2ae880bd",
            "route_table_id": "rtb-0c7f7ec96927dccf8",
            "subnet_id": "subnet-0673aaa7e89c6bc35"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet-1",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301380636616:security-group/sg-0a45090f330627a9a",
            "description": "Allow wev inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a45090f330627a9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": null,
            "owner_id": "301380636616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb1022a578729b6"
          },
          "dependencies": [
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301380636616:subnet/subnet-0673aaa7e89c6bc35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0673aaa7e89c6bc35",
            "map_public_ip_on_launch": false,
            "owner_id": "301380636616",
            "tags": {
              "Name": "tf-subnet"
            },
            "vpc_id": "vpc-06fb1022a578729b6"
          },
          "dependencies": [
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-tf-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301380636616:vpc/vpc-06fb1022a578729b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08080eee4724d9eaf",
            "default_route_table_id": "rtb-04a2bead57dc734d6",
            "default_security_group_id": "sg-0239ad1e017b28622",
            "dhcp_options_id": "dopt-64c8781e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06fb1022a578729b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04a2bead57dc734d6",
            "owner_id": "301380636616",
            "tags": {
              "Name": "my-tf-vpc"
            }
          }
        }
      ]
    }
  ]
}